[gd_scene load_steps=16 format=3 uid="uid://dqf1lhdttsbo3"]

[ext_resource type="Script" path="res://game.gd" id="1_ifumx"]
[ext_resource type="PackedScene" uid="uid://b4lbu5obciidt" path="res://elements/ui/hud/hud.tscn" id="1_k8vu2"]
[ext_resource type="Texture2D" uid="uid://s4d8sl426eel" path="res://background/pixelart_starfield.png" id="1_m8tma"]
[ext_resource type="PackedScene" uid="uid://bwe3jovd8u5m6" path="res://elements/wall.tscn" id="2_5166h"]
[ext_resource type="Script" path="res://Manager.gd" id="2_eonyn"]
[ext_resource type="PackedScene" uid="uid://bxqa1t35s7pkt" path="res://elements/ui/pause.tscn" id="3_50ruu"]
[ext_resource type="PackedScene" uid="uid://u260iy8res8c" path="res://elements/character/spaceship.tscn" id="3_ax0jj"]
[ext_resource type="PackedScene" uid="uid://2j4pkh5ssjw4" path="res://elements/enemy_group/enemy_group.tscn" id="4_yqo8f"]
[ext_resource type="PackedScene" uid="uid://bxuskfx3vag7y" path="res://elements/ui/level_complete/level_complete.tscn" id="5_y0hy6"]
[ext_resource type="AudioStream" uid="uid://trf4nxqpottl" path="res://music/keygen_original.mp3" id="7_w4o4r"]
[ext_resource type="AudioStream" uid="uid://cj2oomdl4camd" path="res://sfx/fail_sound.mp3" id="8_xieyi"]
[ext_resource type="AudioStream" uid="uid://dmil4g381axfw" path="res://sfx/ufo_sound.mp3" id="9_reray"]
[ext_resource type="PackedScene" uid="uid://biulixy7wdmm7" path="res://elements/bunker/bunker.tscn" id="10_2tscg"]
[ext_resource type="PackedScene" uid="uid://cmqkc3wa0nw2v" path="res://elements/proj_catcher/proj_catcher.tscn" id="11_w2bsm"]
[ext_resource type="AudioStream" uid="uid://5tqs751ph0c4" path="res://sfx/level_complete.mp3" id="15_oerp2"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_ifumx")

[node name="LevelComplete" parent="." instance=ExtResource("5_y0hy6")]
visible = false

[node name="Manager" type="Node" parent="."]
process_mode = 3
script = ExtResource("2_eonyn")

[node name="Pause" parent="Manager" instance=ExtResource("3_50ruu")]

[node name="Label" parent="Manager/Pause/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="HUD" parent="." instance=ExtResource("1_k8vu2")]

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 3
texture_repeat = 2
position = Vector2(128, 120)
texture = ExtResource("1_m8tma")
region_enabled = true
region_rect = Rect2(0, 41, 256, 240)

[node name="Spaceship" parent="." instance=ExtResource("3_ax0jj")]
position = Vector2(128, 227)

[node name="Wall" parent="." instance=ExtResource("2_5166h")]
position = Vector2(10, 168)
scale = Vector2(0.16699, 1)

[node name="Wall3" parent="." instance=ExtResource("2_5166h")]
position = Vector2(76, 247)
rotation = 1.5708
scale = Vector2(0.16699, 1.08)

[node name="Wall2" parent="." instance=ExtResource("2_5166h")]
position = Vector2(269, 168)
scale = Vector2(0.16699, 1)

[node name="EnemyGroup" parent="." instance=ExtResource("4_yqo8f")]
position = Vector2(13, 46)
scale = Vector2(1.1, 1.056)

[node name="SpawnUfoTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Level1Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_w4o4r")
autoplay = true
bus = &"music"

[node name="FailSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_xieyi")
bus = &"sfx"

[node name="UfoSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_reray")
volume_db = 5.0
bus = &"sfx"

[node name="Bunker" parent="." instance=ExtResource("10_2tscg")]
position = Vector2(41, 194)
scale = Vector2(1.2, 1.2)

[node name="Bunker2" parent="." instance=ExtResource("10_2tscg")]
position = Vector2(98, 194)
scale = Vector2(1.2, 1.2)

[node name="Bunker3" parent="." instance=ExtResource("10_2tscg")]
position = Vector2(157, 194)
scale = Vector2(1.2, 1.2)

[node name="Bunker4" parent="." instance=ExtResource("10_2tscg")]
position = Vector2(215, 194)
scale = Vector2(1.2, 1.2)

[node name="proj_catcher" parent="." instance=ExtResource("11_w2bsm")]
position = Vector2(0, -144)

[node name="LevelCompleteSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-50, 0)
stream = ExtResource("15_oerp2")

[connection signal="pressed" from="LevelComplete/MarginContainer2/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="SpawnUfoTimer" to="." method="_on_spawn_ufo_timer_timeout"]

[editable path="LevelComplete"]
[editable path="Manager/Pause"]
